[Omnibox] fix vertical alignment of icon and text in results

This Cl restores a kVerticalPadding which isn't necessary on Linux, but
appears to be needed on Mac and Windows.

Bug: 843189
Change-Id: Ia87d7dbaf4808c3bb4e9b2b4b4a33eed0069a6e3
Reviewed-on: https://chromium-review.googlesource.com/1069678
Reviewed-by: Justin Donnelly <jdonnelly@chromium.org>
Commit-Queue: Dave Schuyler <dschuyler@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561225}